--- a/MyPanelExtensionChrome/popup.html
+++ b/MyPanelExtensionChrome/popup.html
@@ -20,16 +20,16 @@
 	      <a id="gmail" class="nav-item nav-link">Gmail</a>
 	      <a id="linkdin" class="nav-item nav-link">Linkdin</a>
 	      <a id="infojobs" class="nav-item nav-link">InfoJobs</a>
+	      <a id="github" class="nav-item nav-link">GitHub</a>
 	    </div>
 	  </div>
 	</nav>
-
-	<!--<h3>Thi's my fucking extension!!</h3>-->
 	
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<button class="btn btn-success" id="HHD">Open my website</button>
+				<!--aquí el botón para la utilidad que cualquiera desee, en este caso sera a google-->
+				<button class="btn btn-success" id="btn">Open google</button>
 			</div>
 		</div>
 	</div>
